src/objects/loan__Loan_Write_Off_Transaction__c.object
<CustomObject>
    <description>This transaction specifies that the loan is being written off with the amount paid.</description>
    <fields>
        <fullName>loan__Amount_Overdue__c</fullName>
        <label>Amount Overdue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__Cleared__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Cleared</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>loan__Fees_Remaining__c</fullName>
        <label>Fees Remaining</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__Interest_Remaining__c</fullName>
        <label>Interest Remaining</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__Loan_Account__c</fullName>
        <label>Loan Account</label>
        <referenceTo>loan__Loan_Account__c</referenceTo>
        <relationshipLabel>Loan Write Off Transaction</relationshipLabel>
        <relationshipName>Loan_Write_Off_Transaction</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>loan__Principal_Remaining__c</fullName>
        <label>Principal Remaining</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__Receipt_ID__c</fullName>
        <displayFormat>LWORID-{0000000000}</displayFormat>
        <label>Receipt ID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>loan__Rejected__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Rejected</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>loan__Total_Amount_Remaining__c</fullName>
        <formula>loan__Amount_Overdue__c +  loan__Interest_Remaining__c +  loan__Principal_Remaining__c +  loan__Fees_Remaining__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Amount Remaining</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__Transaction_Date__c</fullName>
        <defaultValue>$User.loan__Current_Branch_s_System_Date__c</defaultValue>
        <label>Transaction Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <label>Loan Write Off Transaction</label>
    <nameField>
        <displayFormat>LWOTID-{0000000000}</displayFormat>
        <label>Loan Write Off Transaction ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Loan Write Off Transaction</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>loan__Transaction_Date_Check</fullName>
        <active>true</active>
        <errorConditionFormula>loan__Transaction_Date__c &gt; TODAY()</errorConditionFormula>
        <errorMessage>Transaction date cannot be greater than calendar date.</errorMessage>
    </validationRules>
</CustomObject>